[gd_scene load_steps=10 format=3 uid="uid://mxfvmb0rwbxn"]

[ext_resource type="Script" uid="uid://du0aid7g27ur2" path="res://galeria.gd" id="1_qxtgx"]
[ext_resource type="Texture2D" uid="uid://k61ky25f6q45" path="res://png/Galeria_4.jpg" id="2_x6qe7"]
[ext_resource type="Texture2D" uid="uid://13q1mxi86wxd" path="res://png/Galeria_1.jpg" id="3_jb3pb"]
[ext_resource type="Texture2D" uid="uid://b5efjp40re0fm" path="res://png/Galeria_3.jpg" id="4_bxvww"]
[ext_resource type="Texture2D" uid="uid://cmct5j6wireh1" path="res://png/Galeria_2.jpg" id="5_ho1dy"]
[ext_resource type="Texture2D" uid="uid://buxnpwh7uagc1" path="res://png/_Delante..png" id="7_bms57"]
[ext_resource type="FontFile" uid="uid://ey3cboyli4fi" path="res://png/Jersey10-Regular.ttf" id="8_bxvww"]
[ext_resource type="Texture2D" uid="uid://c4mdqr5jwt8h8" path="res://png/Volverrr.png" id="8_jb3pb"]
[ext_resource type="AudioStream" uid="uid://bk6ojl1c4qg3r" path="res://sonido/click_ui.wav" id="9_bxvww"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qxtgx")
imagenes = Array[Texture2D]([ExtResource("2_x6qe7"), ExtResource("3_jb3pb"), ExtResource("4_bxvww"), ExtResource("5_ho1dy")])

[node name="Imagen" type="TextureRect" parent="."]
offset_left = 2.0
offset_right = 1151.0
offset_bottom = 654.0
size_flags_horizontal = 4
texture = ExtResource("2_x6qe7")

[node name="BotonAnterior" type="TextureButton" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -23.0
offset_right = 1278.0
offset_bottom = 1460.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.4)
size_flags_horizontal = 0

[node name="BotonSiguiente" type="TextureButton" parent="."]
offset_left = 1967.0
offset_top = -199.0
offset_right = 3607.0
offset_bottom = 2161.0
texture_normal = ExtResource("7_bms57")

[node name="BotonVolver" type="TextureButton" parent="."]
offset_left = 505.0
offset_top = 570.0
offset_right = 1305.0
offset_bottom = 1170.0
texture_normal = ExtResource("8_jb3pb")

[node name="Label" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 950.0
offset_top = 445.0
offset_right = 1153.0
offset_bottom = 552.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_bxvww")
theme_override_font_sizes/font_size = 42
text = "(HAZ CLICK EN 
LA PANTALLA)"

[node name="botonclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bxvww")
